k8s/dns/dnsutils.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  labels:
    app: dnsutils
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
    - name: dnsutils
      image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
      command:
        - sleep
        - "3600"
      imagePullPolicy: IfNotPresent
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
  restartPolicy: Always
