k8s/dns/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello
  labels:
    app: hello
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
  - name: hello
    image: avthart/hello-app:1.0.0
    ports:
      - name: web
        containerPort: 8080
