k8s/dns/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-allow-ingress-from-dnsutils
spec:
  podSelector:
    matchLabels:
      app: hello
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dnsutils
      ports:
        - protocol: TCP
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dnsutils-allow-egress-to-hello
spec:
  podSelector:
    matchLabels:
      app: dnsutils
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: hello
      ports:
        - protocol: TCP
          port: 8080
